# question-bot

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  main.yml
question_bot/: bot_logic.py  config.py  console.py  integrations.py  logic.py  models.py
tests/: test_question_bot.py
