[tool.black]
skip_string_normalization = true
line_length = 100

[tool.poetry]
name = "question-bot"
version = "0.1.0"
description = ""
authors = ["Igor Mosyagin <garik@mosyag.in>"]

[tool.poetry.plugins.console_scripts]
questions_collector = "question_bot.console:cli"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
envparse = "^0.2.0"
python-telegram-bot = "^12.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.7.9"
isort = "^4.3.21"
pre-commit = "^2.3.0"
ipython = "^7.14.0"
rich = "^1.0.0"
ipdb = "^0.13.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
